--- a/mongo-demo/index.html
+++ b/mongo-demo/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Node Course</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css"> -->
     <script src="index.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="boxes">
-        <h1>'Hey There, Hows NodeJS goin !!</h1>
+      <h1>
+        'Hey There, Hows NodeJS goin !!
+
+        <div
+          class="Trsdu(.42s) Animn($anim-spin) Animic(i) Animtf(l) Bgz(cv) W(40px) H(40px)"
+          style="animation-duration:2.6875s;-moz-animation-duration:2.6875s;-o-animation-duration:2.6875s;-webkit-animation-duration:2.6875s;background-image:url(https://s.yimg.com/os/weather/1.0.1/windmill/blade_big@2x.png);"
+          data-reactid="451"
+        ></div>
+      </h1>
     </div>
-</body>
+  </body>
 </html>
